--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "lodash": "latest",
+    "normalizr": "latest",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
+    "styled-components": "^4.4.0",
+    "superagent": "latest",
     "typescript": "3.6.3"
   },
   "scripts": {
@@ -32,5 +36,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/i18next": "^13.0.0",
+    "@types/lodash": "^4.14.141",
+    "@types/styled-components": "^4.1.19",
+    "@types/superagent": "^4.1.3",
+    "prettier": "^1.18.2",
+    "tslint": "^5.20.0"
   }
 }
