--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.0",
     "superagent": "latest",
-    "typescript": "3.6.3"
+    "typescript": "^3.7.0-beta"
   },
   "scripts": {
     "start": "react-scripts start",
