--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "typescript": "^3.7.0-beta"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,11 +38,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@types/i18next": "^13.0.0",
     "@types/lodash": "^4.14.141",
     "@types/styled-components": "^4.1.19",
     "@types/superagent": "^4.1.3",
+    "customize-cra": "^0.8.0",
     "prettier": "^1.18.2",
+    "react-app-rewired": "^2.1.3",
     "tslint": "^5.20.0"
   }
 }
